<resources>
    <string name="app_name">Blood Bank</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="front_image">Front Image</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="receiver">Receiver</string>
    <string name="donor">Donor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="blood_group">Blood Group</string>
    <string name="choose_bloodgroup">Choose BloodGroup</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="remember_me">Remember me</string>
    <string name="profile">Profile</string>
    <string name="massage_btn">Massage</string>
    <string name="close_btn">Close</string>
    <string name="edit_btn">Edit</string>
    <string name="key_id">Key ID : </string>
    <string name="logout">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
</resources>
