<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muneeb.bloodbank.ProfileFrag">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/keyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_centerHorizontal="true"
        android:text="@string/key_id" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_marginTop="26dp"
        android:text="@string/name"
        android:layout_below="@+id/keyView"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/email_address"
        android:layout_below="@+id/nameView"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/password"
        android:layout_below="@+id/emailView"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/phoneView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/phone_number"
        android:layout_below="@+id/passwordView"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/cityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/city"
        android:layout_below="@+id/phoneView"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/ageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/age"
        android:layout_below="@+id/cityView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/genderView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/gender"
        android:layout_below="@+id/ageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/bloodGroupView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_group"
        android:layout_below="@+id/genderView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_colorchange"
        android:padding="12dp"
        android:text="@string/edit_btn"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_below="@+id/bloodGroupView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

</RelativeLayout>
