<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.muneeb.bloodbank.ReceiverFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/gender_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_gender"
        android:textColor="#000"
        android:textStyle="bold|italic"
        android:layout_marginTop="5dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/gender_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:prompt="@string/choose_bloodgroup"
        android:background="@drawable/spinner_bg" />

    <TextView
        android:id="@+id/bloodGroup_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_bloodgroup"
        android:textColor="#000"
        android:textStyle="bold|italic"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/bloodGroup_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_bg"/>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:background="@drawable/button_colorchange"
        android:padding="12dp"
        android:text="@string/search"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/receiverList">

    </ListView>
</LinearLayout>
