<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muneeb.bloodbank.DetailsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/donor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_colorchange"
            android:padding="10dp"
            android:text="@string/donor"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reciver_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_colorchange"
            android:padding="10dp"
            android:text="@string/receiver"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"
            android:background="@drawable/button_colorchange"
            android:padding="10dp"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp">

    </FrameLayout>

</RelativeLayout>
